# CounterTuneIO

./: .gitignore  CMakeLists.txt  countertuneio-test.flp
Source/: MelodyGenerator.cpp  MelodyGenerator.h  PitchDetector.cpp  PitchDetector.h  PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h
